gcc/testsuite/rust/compile/auto_trait.rs
auto trait Valid {} // { dg-error "auto traits are experimental and possibly buggy" }
